@@ -2,12 +2,12 @@
                          once = FALSE)
 {
     stopifnot(is.null(condition), identical(text, ""))
-    fun <- getGeneric(fun, mustWork = TRUE)
+    fun <- getGeneric(fun, mustFind = TRUE)
 
     if(isdebugged(fun, signature = signature))
         return(invisible(NULL))
-    
-    m <- selectMethod(fun, signature)
+
+    m <- .untracedFunction(selectMethod(fun, signature))
     bd <- body(m)
 
     isrematch <- isRematched(m)
@@ -15,7 +15,7 @@
         bd <- body(bd[[2L]][[3L]])
 
     at <- if(is(bd, "{")) 2L else numeric()
-    
+
     tracer <- if(once) {
         ## If the method is rematched we're in .local so we need to reach up one
         ## frame to get the generic and target in that case
